# TraceGuard

./: .gitattributes  .gitignore  AGENTS.md  README.md  command.txt  pyproject.toml  requirements.txt
configs/: debug.yaml  default.yaml
configs/experiments/: README.md  cifar100_a3fl.yaml  cifar100_dba.yaml  cifar100_model_replacement.yaml  cifar100_neurotoxin.yaml  cifar10_a3fl.yaml  cifar10_dba.yaml  cifar10_model_replacement.yaml  cifar10_neurotoxin.yaml  tinyimagenet_a3fl.yaml  tinyimagenet_dba.yaml  tinyimagenet_model_replacement.yaml  tinyimagenet_neurotoxin.yaml
configs/sanity/: cifar10_resnet18_cpu_smoke.yaml
docs/: ASAGuard.md  TRACEGuard_final_design.md  experiment_plan.md  results_archive_20260608.md
scripts/: analyze_results.py  collect_results.py  run_main_experiments.py  run_sanity_matrix.py
src/asaguard/: __init__.py
src/asaguard/aggregation/: __init__.py  fedavg.py  flame.py  multi_krum.py  trimmed_mean.py
src/asaguard/attacks/: a3fl.py  dba.py  model_replacement.py  neurotoxin.py  triggers.py
src/asaguard/data/: __init__.py  datasets.py  partitioners.py
src/asaguard/defenses/: fdcr.py  flip.py
src/asaguard/fl/: run.py  server.py
src/asaguard/method/: __init__.py  aggregation.py  probe_bank.py
src/asaguard/metrics/: __init__.py  backdoor.py  classification.py
src/asaguard/models/: __init__.py  cnn.py
src/asaguard/utils/: __init__.py  config.py  seed.py
src/traceguard/: __init__.py
src/traceguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/traceguard/fl/: run.py  (+3 more)
tests/: test_cli.py  test_config.py
(+57 files in other folders)
