[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traceguard"
version = "0.1.0"
description = "Server-side trigger-family auditing scaffold for federated backdoor defense."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "scipy",
  "pandas",
  "pyyaml",
  "tqdm",
  "scikit-learn",
  "pytest",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
traceguard-run = "traceguard.fl.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
