[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asaguard"
version = "0.1.0"
description = "Association-safe aggregation for federated backdoor defense."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "scipy",
  "pandas",
  "pyyaml",
  "tqdm",
  "scikit-learn",
]

[project.scripts]
asaguard-run = "asaguard.fl.run:main"

[tool.setuptools.packages.find]
where = ["src"]
